Fix playlist overflow on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -22,6 +22,11 @@ button, label {
     font-size: 20px;
 }
 
+#playlist {
+    display: block;
+    overflow: auto;
+}
+
 #playlist a {
     color: black;
     font-family: sans-serif;
